<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center"
    >

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_tv"
        android:textColor="@color/teal_700"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dayTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:text="@string/day_tv" />

        <Spinner
            android:id="@+id/dspinner"
            android:layout_width="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/MonthTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:text="@string/month_tv" />

        <Spinner
            android:id="@+id/mspinner"
            android:layout_width="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/YearTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:text="@string/year_tv" />

        <Spinner
            android:id="@+id/yspinner"
            android:layout_width="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/date_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/displayDate"
        android:layout_marginTop="20dp"
        android:textColor="@color/teal_700"
        android:backgroundTint="@color/white"/>

    <TextView
        android:id="@+id/timeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_tv"
        android:textColor="@color/teal_700"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/HourTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:text="@string/hour_tv" />

        <Spinner
            android:id="@+id/hspinner"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/MinuteTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:text="@string/minute_tv" />

        <Spinner
            android:id="@+id/minspinner"
            android:layout_width="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/amPm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:text="@string/am_pm_tv" />

        <Spinner
            android:id="@+id/spinnerAMPM"
            android:layout_width="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <Button
        android:id="@+id/time_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/displayTime"
        android:backgroundTint="@color/white"
        android:textColor="@color/teal_700"
        android:layout_marginTop="20dp"/>

</LinearLayout>